--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -4,11 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
-    - field.field.node.page.field_content
-    - field.field.node.page.field_hero
+    - field.field.node.page.layout_builder__layout
     - node.type.page
   module:
-    - layout_paragraphs
     - path
 _core:
   default_config_hash: SfpLhPExzvR0MgFp0Wp7CrmgEnhcqQ-fXIWFhbf4ue0
@@ -22,30 +20,6 @@ content:
     weight: 2
     region: content
     settings: {  }
-    third_party_settings: {  }
-  field_content:
-    type: layout_paragraphs
-    weight: 8
-    region: content
-    settings:
-      view_mode: default
-      preview_view_mode: default
-      form_display_mode: default
-      nesting_depth: 0
-      require_layouts: 0
-      empty_message: ''
-    third_party_settings: {  }
-  field_hero:
-    type: layout_paragraphs
-    weight: 7
-    region: content
-    settings:
-      view_mode: default
-      preview_view_mode: default
-      form_display_mode: default
-      nesting_depth: 0
-      require_layouts: 0
-      empty_message: ''
     third_party_settings: {  }
   path:
     type: path
@@ -94,3 +68,4 @@ content:
     third_party_settings: {  }
 hidden:
   body: true
+  layout_builder__layout: true
