--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -38,19 +38,17 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  gin_toolbar: 0
   heading: 0
   help: 0
   history: 0
   image: 0
   inline_entity_form: 0
+  layout_builder: 0
   layout_discovery: 0
-  layout_paragraphs: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
-  mercury_editor: 0
-  mercury_editor_live_edit: 0
-  mercury_editor_templates: 0
   mysql: 0
   node: 0
   options: 0
@@ -61,7 +59,6 @@ module:
   search: 0
   shortcut: 0
   state_machine: 0
-  style_options: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -72,9 +69,9 @@ module:
   views_ui: 0
   workflows: 0
   views: 10
-  paragraphs: 11
   standard: 1000
 theme:
-  olivero: 0
   claro: 0
+  belgrade: 0
+  gin: 0
 profile: standard
